--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
 
 html {
   box-sizing: border-box;
@@ -6,4 +7,99 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
+  font-family: Sen, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #c9ced3;
+}
+
+.container {
+  width: 480px;
+  height: 630px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.4);
+}
+
+form {
+  width: 90%;
+}
+
+.form-group {
+  height: 65px;
+}
+
+label {
+  position: relative;
+  bottom: 3px;
+}
+
+input {
+  width: 100%;
+  height: 34px;
+  padding: 5px;
+  border: 1px solid black;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  outline: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+input:valid {
+  border: 1px solid green;
+}
+
+input:invalid {
+  border: 1px solid red;
+}
+
+button {
+  cursor: pointer;
+  color: white;
+  background: black;
+  border: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  height: 50px;
+  width: 100%;
+  font-family: Sen, sans-serif;
+  font-size: 20px;
+  margin-top: 5px;
+}
+
+button:hover {
+  filter: brightness(200%);
+  background-color: rgb(22, 22, 22);
+}
+
+button:focus {
+  outline: none;
+}
+
+.message-container {
+  border: 1px solid black;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  width: 90%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  color: black;
 }
